<resources>
    <string name="app_name">Krishi</string>

    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="camera">Camera</string>
    <string name="like" translatable="false">Like</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="crops">Crops</string>
    <string name="posts">Posts</string>

    <string name="default_web_client_id">176494409738-rpveoe363pn03p7lba8814i1hk3ghkb9.apps.googleusercontent.com</string>
    <string name="voice">Voice</string>
    <string name="market">Market</string>
    <string name="settings">Settings</string>
    <string name="signIn">Sign In</string>
    <string name="display">Display</string>
    <string name="darkMode">Dark Mode</string>
    <string name="upload">Upload</string>
    <string name="terms">Terms and policy</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="feedback">Send feedback</string>

    <string name="yourMsg">Your message..</string>

    <string name="count">243423</string>
    <string name="vendors">Vendors</string>
    <string name="halfprice">Half Price Harvest</string>
    <string name="interactors">Interactors</string>
    <string name="interacting">Interacting</string>
    <string name="interact">Interact</string>
    <string name="message">Message</string>

    <string name="soils">Soils</string>


    <string name="maxTemp">Maximum Temperature in C</string>
    <string name="minTemp">Minimum Temperature in C</string>
    <string name="avgTemp">Average Temperature in C</string>
    <string name="itRain">Rain chances</string>
    <string name="windKph">Wind speed in KPH </string>

    <string name="value">33.3</string>


    <string name="time">Time</string>
    <string name="temp_c">Temperature in C</string>
    <string name="humidity">Humidity</string>
    <string name="cloud">Cloud</string>
    <string name="windChill">Wind Chill in C</string>
    <string name="heat">Heat in climate</string>
    <string name="dewPoint">Dew point in C</string>

    <string name="no_chat">No chat</string>
    <string name="grow_duration">Grow duration</string>
    <string name="grow">Grow</string>
    <string name="weather">Weather</string>
    <string name="language">Language</string>

    <string name="weather7">7 days weather</string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>


    <string name="farmer_info">Farmer selection got tick mark.</string>
    <string name="user_info">User selection does not get tick mark.</string>
    <string name="user">User</string>
    <string name="farmer">Farmer</string>
    <string name="sign_in_info">Oops! you are not Log In</string>
    <string name="sign_in_google">Sign in with google</string>
    <string name="uploadImage">Upload Image</string>
    <string name="selectImage">Select Image</string>
    <string name="postTitle">post title</string>
    <string name="price">price</string>
    <string name="quantity">Quantity</string>
    <string name="name">name</string>
    <string name="timeout">Upload time out crops</string>
    <string name="logout">Log out</string>
    <string name="logined">Already logined</string>
    <string name="uploadPost">Upload post</string>

    <string name="connection_error">Oops! you are not connected to internet.</string>


    <string name="logIn">Log In</string>

    <string name="email">example@email.com</string>
    <string name="password">******************</string>
    <string name="createAccount">Create an account</string>
    <string name="fullName">Full name</string>
    <string name="alreadyAccount">Already have an account? Log In</string>
    <string name="accountPreferences">Account Preferences</string>
    <string name="appPreferences">App Preferences</string>
    <string name="policyAndTerms">Policy and help</string>

    <string name="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="email_field">Email field is empty</string>
    <string name="password_field">Password field is empty</string>
    <string name="password_repeat_field">Repeat password field is empty</string>
    <string name="password_equal">Password and repeat password must be same</string>
    <string name="full_name_field">Full name field is empty</string>
    <string name="noAccounts">No accounts found</string>
    <string name="loading">Loading...</string>
    <string name="technicalError">Technical Error</string>
    <string name="forgot_password">Forgot password</string>
    <string name="resetPassword">Reset password</string>
    <string name="otp">Verify OTP</string>
    <string name="login_success">Already! login in.</string>
    <string name="viewProfile">View profile</string>
    <string name="editProfile">Edit profile</string>
    <string name="cropGraph">Crops sold graph</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="your_orders">Your orders</string>
    <string name="your_cart">Your cart</string>

    <string name="orderNow">Order now</string>
    <string name="basicInfo">Basic info</string>
    <string name="vendorsAndFarmers">Vendors and Farmers</string>


</resources>