<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/yield_image"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:src="@color/mediumSeaGreen"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/curveImage" />

    <TextView
        android:id="@+id/yield_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toEndOf="@+id/yield_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yield_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/yield_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/yield_name"
        app:layout_constraintTop_toBottomOf="@+id/yield_name" />


    <TextView
        android:id="@+id/yield_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/yield_quantity"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="@+id/yield_quantity"
        app:layout_constraintTop_toBottomOf="@+id/yield_quantity" />

    <TextView
        android:id="@+id/yield_use_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="serif"
        android:text="@string/farmer"

        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/yield_image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/yield_image"
        app:layout_constraintTop_toBottomOf="@+id/yield_image" />

    <Button
        android:id="@+id/yieldButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/medium_sea_green_border"
        android:fontFamily="serif"
        android:padding="10dp"
        android:textColor="@color/black"
        android:text="@string/orderNow"

        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toEndOf="@+id/yield_image"
        app:layout_constraintTop_toBottomOf="@+id/yield_price" />

</androidx.constraintlayout.widget.ConstraintLayout>